fix basemap tabs height on iOS

--- a/src/components/Panels/Basemaps/Blend/Blend.css
+++ b/src/components/Panels/Basemaps/Blend/Blend.css
@@ -5,3 +5,6 @@
 calcite-stepper-item {
   width: 100%;
 }
+/* .blend calcite-tabs {
+  height: calc(var(--app-height) - 49px - 34px - 59.8438px);
+} */
